fixed mobile adaptivity bug - collapse menu was layered behind the content container element, changed navbar collapse in to position relative

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -3897,6 +3897,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .nav > li {
   position: relative;
   display: block;
+  z-index:1001;
 }
 .nav > li > a {
   position: relative;
@@ -4084,7 +4085,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
   /*Main Page Header - Parent Class */ 
-  position: relative;
+  position: static;
   min-height: 50px;
  
 }
@@ -4099,6 +4100,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-collapse {
+  position:relative;
   padding-right: 15px;
   padding-left: 15px;
   margin-bottom: 10px;
@@ -4115,7 +4117,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar-collapse {
-    width: auto;
+    width: 100%;
     border-top: 0;
     -webkit-box-shadow: none;
             box-shadow: none;
@@ -4156,8 +4158,8 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .container-fluid > .navbar-header,
 .container > .navbar-collapse,
 .container-fluid > .navbar-collapse {
-  margin-right: -15px;
-  margin-left: -15px;
+  margin-right: 0px;
+  margin-left: 0px;
 
 }
 @media (min-width: 768px) {
